--- a/guneshukuk.DataAccessLayer/guneshukuk.DataAccessLayer.csproj
+++ b/guneshukuk.DataAccessLayer/guneshukuk.DataAccessLayer.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\guneshukuk.EntityLayer\guneshukuk.EntityLayer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
