--- a/guneshukuk.WebAPI/appsettings.json
+++ b/guneshukuk.WebAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=ebed21d8-e458-400c-adb0-6eb1faa4b544;IngestionEndpoint=https://switzerlandnorth-0.in.applicationinsights.azure.com/;LiveEndpoint=https://switzerlandnorth.livediagnostics.monitor.azure.com/;ApplicationId=e5e5b04c-2652-43c1-9d07-1093e24d7f9f"
+  }
 }
