--- a/guneshukuk.WebUIv2/guneshukuk.WebUIv2.csproj
+++ b/guneshukuk.WebUIv2/guneshukuk.WebUIv2.csproj
@@ -31,6 +31,7 @@
 
 
   <ItemGroup>
+    <ProjectReference Include="..\guneshukuk.BusinessLayer\guneshukuk.BusinessLayer.csproj" />
     <ProjectReference Include="..\guneshukuk.DataAccessLayer\guneshukuk.DataAccessLayer.csproj" />
   </ItemGroup>
 
