--- a/guneshukuk.WebAPI/Properties/launchSettings.json
+++ b/guneshukuk.WebAPI/Properties/launchSettings.json
@@ -24,7 +24,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://guneshukukwebapi.azurewebsites.net;http://localhost:5097",
+      "applicationUrl": "https://guneshukukwebapi1.azurewebsites.net;http://localhost:5097",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
